--- a/todo.html
+++ b/todo.html
@@ -9,8 +9,23 @@
       rel="stylesheet">
 </head>
 <body>
-    <input type = "text">
+    <input type = 'text' placeholder="new todo">
+    <p><input type = "text" placeholder="카테고리 입력" list = "categoryList"></p>
+    <datalist id = "categoryList">
+        <option value="Personal"></option>
+        <option value="work"></option>
+    </datalist>
+    <button id ="addBtn">Add</button>
     <ul></ul>
+    <table id="todoTable">
+        <tr>
+            <td>checkbox</td>
+            <td>to-do</td>
+            <td>category</td>
+            <td>delete</td>
+        </tr>
+
+    </table>
     <script src ="todo.js">
         // document.getElementsByTagName
         // ("input")[0].onchange= (event) => {
